[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/BG.png" type="Texture" id=1]
[ext_resource path="res://assets/font/ConcertOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/conbuthov.png" type="Texture" id=3]
[ext_resource path="res://assets/conbutnorm.png" type="Texture" id=4]
[ext_resource path="res://assets/conbutpress.png" type="Texture" id=5]
[ext_resource path="res://assets/stbuthov.png" type="Texture" id=6]
[ext_resource path="res://assets/stbutnorm.png" type="Texture" id=7]
[ext_resource path="res://assets/stbutpress.png" type="Texture" id=8]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=9]
[ext_resource path="res://assets/bgconn.png" type="Texture" id=10]
[ext_resource path="res://assets/Green.png" type="Texture" id=11]
[ext_resource path="res://assets/Purple.png" type="Texture" id=12]
[ext_resource path="res://assets/Blue.png" type="Texture" id=13]
[ext_resource path="res://assets/Red.png" type="Texture" id=14]
[ext_resource path="res://assets/Yellow.png" type="Texture" id=15]
[ext_resource path="res://assets/restnorm.png" type="Texture" id=16]
[ext_resource path="res://assets/restpress.png" type="Texture" id=17]
[ext_resource path="res://assets/resthov.png" type="Texture" id=18]
[ext_resource path="res://assets/exitbutnorm.png" type="Texture" id=19]
[ext_resource path="res://assets/exitbuthov.png" type="Texture" id=20]
[ext_resource path="res://assets/exitbutpress.png" type="Texture" id=21]
[ext_resource path="res://assets/borderpress.png" type="Texture" id=22]
[ext_resource path="res://assets/bordernorm.png" type="Texture" id=23]
[ext_resource path="res://assets/borderhov.png" type="Texture" id=24]

[sub_resource type="DynamicFont" id=1]
size = 41
outline_size = 3
outline_color = Color( 0, 0.2, 0.2, 1 )
extra_spacing_char = 4
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0.2, 0.2, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 2
outline_color = Color( 0, 0.2, 0.2, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
outline_size = 2
outline_color = Color( 0, 0.2, 0.2, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
outline_size = 2
outline_color = Color( 0, 0.2, 0.2, 1 )
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_vertical_guides_": [ 512.0 ]
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 200.0
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="."]
margin_left = 12.0
margin_top = -4.0
margin_right = 292.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 1 )
text = "CARRERICA"

[node name="Label2" type="Label" parent="."]
margin_left = 408.0
margin_top = 8.0
margin_right = 621.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 2 )
text = "Join your team"

[node name="Label8" type="Label" parent="."]
margin_left = 416.0
margin_top = 168.0
margin_right = 605.0
margin_bottom = 194.0
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 5 )
text = "minimum 2 per team"

[node name="Label9" type="Label" parent="."]
margin_left = 188.0
margin_top = 36.0
margin_right = 281.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 5 )
text = "@Endorth4"

[node name="Label3" type="Label" parent="."]
margin_left = 328.0
margin_top = 144.0
margin_right = 374.0
margin_bottom = 170.0
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 4 )
text = "!join b"

[node name="Label4" type="Label" parent="."]
margin_left = 408.0
margin_top = 144.0
margin_right = 452.0
margin_bottom = 170.0
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 4 )
text = "!join r"

[node name="Label5" type="Label" parent="."]
margin_left = 488.0
margin_top = 144.0
margin_right = 534.0
margin_bottom = 170.0
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 4 )
text = "!join p"

[node name="Label6" type="Label" parent="."]
margin_left = 568.0
margin_top = 144.0
margin_right = 613.0
margin_bottom = 170.0
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 4 )
text = "!join y"

[node name="Label7" type="Label" parent="."]
margin_left = 648.0
margin_top = 144.0
margin_right = 694.0
margin_bottom = 170.0
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 4 )
text = "!join g"

[node name="bluecount" type="Label" parent="."]
margin_left = 328.0
margin_top = 76.0
margin_right = 374.0
margin_bottom = 102.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 4 )
text = "999"
align = 1

[node name="redcount" type="Label" parent="."]
margin_left = 408.0
margin_top = 76.0
margin_right = 452.0
margin_bottom = 102.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 4 )
text = "999"
align = 1

[node name="purpcount" type="Label" parent="."]
margin_left = 488.0
margin_top = 76.0
margin_right = 534.0
margin_bottom = 102.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 4 )
text = "999"
align = 1

[node name="yellcount" type="Label" parent="."]
margin_left = 568.0
margin_top = 76.0
margin_right = 613.0
margin_bottom = 102.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 4 )
text = "999"
align = 1

[node name="greencount" type="Label" parent="."]
margin_left = 648.0
margin_top = 76.0
margin_right = 694.0
margin_bottom = 102.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 4 )
text = "999"
align = 1

[node name="ConnectButton" type="TextureButton" parent="."]
margin_left = 840.0
margin_top = 12.0
margin_right = 988.0
margin_bottom = 52.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )
expand = true

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 840.0
margin_top = 144.0
margin_right = 988.0
margin_bottom = 184.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 6 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 316.0
margin_top = 88.0
margin_right = 705.0
margin_bottom = 153.0
custom_constants/separation = 16

[node name="Snail" type="TextureRect" parent="HBoxContainer"]
margin_right = 65.0
margin_bottom = 65.0
rect_min_size = Vector2( 65, 65 )
texture = ExtResource( 13 )

[node name="Snail2" type="TextureRect" parent="HBoxContainer"]
margin_left = 81.0
margin_right = 146.0
margin_bottom = 65.0
rect_min_size = Vector2( 65, 65 )
texture = ExtResource( 14 )

[node name="Snail3" type="TextureRect" parent="HBoxContainer"]
margin_left = 162.0
margin_right = 227.0
margin_bottom = 65.0
rect_min_size = Vector2( 65, 65 )
texture = ExtResource( 12 )

[node name="Snail4" type="TextureRect" parent="HBoxContainer"]
margin_left = 243.0
margin_right = 308.0
margin_bottom = 65.0
rect_min_size = Vector2( 65, 65 )
texture = ExtResource( 15 )

[node name="Snail5" type="TextureRect" parent="HBoxContainer"]
margin_left = 324.0
margin_right = 389.0
margin_bottom = 65.0
rect_min_size = Vector2( 65, 65 )
texture = ExtResource( 11 )

[node name="ConnectPanel" type="Control" parent="."]
margin_left = 704.0
margin_top = 48.0
margin_right = 1020.0
margin_bottom = 144.0

[node name="TextureRect" type="TextureRect" parent="ConnectPanel"]
margin_right = 316.0
margin_bottom = 96.0
texture = ExtResource( 10 )
expand = true

[node name="Label4" type="Label" parent="ConnectPanel"]
margin_left = 192.0
margin_top = 16.0
margin_right = 308.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 3 )
text = "add the data and click below"
align = 1
autowrap = true

[node name="Label3" type="Label" parent="ConnectPanel"]
margin_left = 56.0
margin_top = 20.0
margin_right = 162.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.705882, 0.843137, 0.678431, 1 )
custom_fonts/font = SubResource( 3 )
text = "Twitch channel"

[node name="LineEdit" type="LineEdit" parent="ConnectPanel"]
margin_left = 32.0
margin_top = 52.0
margin_right = 184.0
margin_bottom = 76.0

[node name="TextureButton" type="TextureButton" parent="ConnectPanel"]
margin_left = 220.0
margin_top = 60.0
margin_right = 276.0
margin_bottom = 80.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )
expand = true

[node name="ResetButton" type="TextureButton" parent="."]
margin_left = 688.0
margin_top = 16.0
margin_right = 783.0
margin_bottom = 44.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 18 )
expand = true

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 140.0
margin_right = 112.0
margin_bottom = 180.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 21 )
texture_hover = ExtResource( 20 )
expand = true

[node name="BorderButton" type="TextureButton" parent="."]
margin_left = 128.0
margin_top = 128.0
margin_right = 180.0
margin_bottom = 180.0
toggle_mode = true
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 24 )
expand = true

[connection signal="toggled" from="ConnectButton" to="." method="_on_ConnectButton_toggled"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ConnectPanel/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="toggled" from="BorderButton" to="." method="_on_BorderButton_toggled"]
